--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# Compiled class file
+# Archivos de compilación
 *.class
 
-# Log file
+# Archivos de registro
 *.log
 
-# BlueJ files
-*.ctxt
+# Archivos generados por NetBeans
+nbproject/private/
+build/
+dist/
+nbbuild/
+nbdist/
+.nb-gradle/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Archivos temporales
+*.tmp
+*.bak
+*.swp
+*~
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Archivos del sistema operativo
+.DS_Store
+Thumbs.db
